--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "next-react-avancado",
+  "name": "next-boilerplate-apps-router",
   "version": "0.1.0",
   "private": true,
   "scripts": {
